# adblock2mikrotik

./: .dockerignore  .gitignore  Dockerfile  README.md  config.toml.example  convert_to_hosts.py  hosts.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: black.yml  ci.yml  markdown.yml  pipeline.yml  update_hosts.yml
tests/: test_convert_to_hosts.py
