[project]
name = "adblock2mikrotik"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py312"
line-length = 88  # same default as Black

[tool.ruff.lint]
# E/W — pycodestyle, F — pyflakes, I — isort, UP — pyupgrade
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"] # Ignore line length errors

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes and Black-compatible style
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
